Add main layouts, pages, and components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,9 @@
     "baseUrl": ".",
     "paths": {
       "~/*": ["./*"],
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "faker/*": ["@faker-js/faker/*"],
+      "faker": ["@faker-js/faker"]
     },
     "types": ["@nuxt/types", "@nuxtjs/axios", "@types/node", "jest"]
   },
