--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "*.**": "prettier --check --ignore-unknown"
   },
   "dependencies": {
+    "@faker-js/faker": "^7.3.0",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/style-resources": "^1.2.1",
     "core-js": "^3.19.3",
+    "express": "^4.18.1",
+    "node-cache": "^5.1.2",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
@@ -43,7 +46,9 @@
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/storybook": "^4.3.2",
     "@nuxtjs/stylelint-module": "^4.1.0",
+    "@types/express": "^4.17.13",
     "@types/jest": "^27.5.2",
+    "@types/node": "^18.0.0",
     "@vue/test-utils": "^1.3.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.4.4",
