--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/style-resources": "^1.2.1",
     "core-js": "^3.19.3",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "node-cache": "^5.1.2",
     "nuxt": "^2.15.8",
@@ -47,6 +48,7 @@
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/storybook": "^4.3.2",
     "@nuxtjs/stylelint-module": "^4.1.0",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.5.2",
     "@types/node": "^18.0.0",
